# orbits

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  generate_docs.py  inference.py  iterative_inference_results.json  openenv.yaml  output.txt  pyproject.toml
.obsidian/: workspace.json
docs/: 00-learning-path.md  00_LEARNING_PATH.md  01-quickstart.md  01_SETUP_GUIDE.md  02-openenv-and-config.md  02_ARCHITECTURE_OVERVIEW.md  03-architecture.md  03_PHYSICS_AND_DOMAIN.md  10-env-vars-and-api-keys.md  11-troubleshooting.md  12-dataset-priors-and-iterative-option1.md  Dockerfile.md  Makefile.md  README.md  inference_py.md  openenv_yaml.md  pyproject_toml.md  scripts_build_task_priors_py.md  scripts_run_baseline_py.md  scripts_run_iterative_inference_py.md  scripts_smoke_test_api_py.md  server___init___py.md  server_app_py.md  src_orbits_env___init___py.md  src_orbits_env_baseline_py.md  src_orbits_env_env_py.md  src_orbits_env_graders_scoring_py.md  src_orbits_env_models_py.md  src_orbits_env_simulator_py.md  src_orbits_env_tasks_catalog_py.md  tests_test_api_py.md  tests_test_env_py.md  tests_test_inference_py.md  tests_test_task_priors_py.md
eda-assignment/: eda.ipynb
report/: generate_plots.py  main.tex  orbits_report.md  orbits_report.tex
scripts/: build_task_priors.py  run_baseline.py  run_iterative_inference.py  smoke_test_api.py  validate-submission.sh
server/: app.py
slides/: slides.md
temp/: 04-environment-dynamics.md  05-api-and-inference.md  06-tests-and-validation.md  07-docker-and-deployment.md  08-file-by-file-reference.md  (+2 more)
(+44 files in other folders)
