[project]
name = "orbits-openenv"
version = "0.1.0"
description = "OpenEnv environment for space debris collision avoidance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openenv-core>=0.2.0",
    "openai>=1.79.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbits_env"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
